# Investments

./: .gitignore  Cargo.toml  README.md  settings_template.json
data-collection/: Cargo.toml
data-collection/src/: main.rs
quantlib/: Cargo.toml
quantlib/src/: lib.rs  logging.rs  models.rs  oanda.rs  util.rs
quantlib/src/models/: alpha_model.rs  mod.rs  portfolio_construction_models.rs  trading_signal.rs
quantlib/src/oanda/: errors.rs  helpers.rs  mod.rs  oanda.rs  objects.rs  streaming_api.rs  trading_api.rs
research/: Cargo.toml
research/src/: backtesting.rs  data_cleaning.rs  genetic_optimization.rs  main.rs  old_backtesting.rs  old_main.rs  optimization.rs
scripts/: data_collection_stats.py  end_of_week.py  old_report_viewer.py  read_data.py  report_viewer.py
trading/: Cargo.toml
trading/src/: main.rs
