[package]
name = "data-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantlib = { path = "../quantlib" }
log = "~0.4"
tokio = { version = "1", features = ["full"] }
ctrlc = "3.1.5"

[profile.release]
debug = true